--- a/apps/templates/accounts/edit-permission.html
+++ b/apps/templates/accounts/edit-permission.html
@@ -78,12 +78,28 @@
                         <legend></legend>
                         <div class="row">
                           <div class="col-md-6">
-                            <div class="form-group">
-                              <div class="input-group input-group-merge">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                            <div class="row">
+                              <div class="col-md-12">
+                                <div class="form-group">
+                                  <div class="input-group input-group-merge">
+                                    <div class="input-group-prepend">
+                                      <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                    </div>
+                                    {{ form.name }}
+                                  </div>
                                 </div>
-                                {{ form.name }}
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-md-12">
+                                <div class="form-group">
+                                  <div class="input-group input-group-merge">
+                                    <div class="input-group-prepend">
+                                      <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                    </div>
+                                    {{ form.profile_type }}
+                                  </div>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -93,8 +109,9 @@
                                 <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
                                 </div>
-                                {{ form.permissions_list }}
+                                {{ form.list }}
                               </div>
+                              {{ form.codes.as_hidden }}
                             </div>
                           </div>
                         </div>
@@ -104,7 +121,7 @@
                                 <ul>
                                     {% for menu in menus %}
                                         <li class="custom-control custom-control-alternative custom-checkbox">
-                                            <input class="custom-control-input" id="{{menu.uid}}" type="checkbox">
+                                            <input class="custom-control-input" id="{{menu.uid}}" type="checkbox" {% if menu.uid in form.codes.value %} checked {% endif %}>
                                             <label class="custom-control-label" for="{{menu.uid}}">{{menu.name}}</label>
     
                                             <a class="d-inline-block ml-3" href="#div-{{menu.name}}" data-toggle="collapse"
@@ -115,7 +132,7 @@
                                                 <ul class="ml--4">
                                                     {% for sub in menu.menu_subs.all %}
                                                         <li class="custom-control custom-control-alternative custom-checkbox">
-                                                            <input class="custom-control-input" id="{{sub.uid}}" type="checkbox">
+                                                            <input class="custom-control-input" id="{{sub.uid}}" type="checkbox" {% if sub.uid in form.codes.value %} checked {% endif %}>
                                                             <label class="custom-control-label" for="{{sub.uid}}">{{sub.name}}</label>
     
                                                             <a class="d-inline-block ml-3" href="#div-{{sub.name}}" data-toggle="collapse"
@@ -126,7 +143,7 @@
                                                                 <ul class="ml--4">
                                                                     {% for action in sub.submenu_actions.all %}
                                                                         <li class="custom-control custom-control-alternative custom-checkbox">
-                                                                            <input class="custom-control-input" id="{{action.uid}}" type="checkbox">
+                                                                            <input class="custom-control-input" id="{{action.uid}}" type="checkbox" {% if action.uid in form.codes.value %} checked {% endif %}>
                                                                             <label class="custom-control-label" for="{{action.uid}}">{{action.name}}</label>
                                                                         </li>
                                                                     {% endfor %}
@@ -172,8 +189,38 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
     <script>
-        setTimeout(function() {
-            $(".alert").alert('close');
-        }, 3000);
+      setTimeout(function() {
+          $(".alert").alert('close');
+      }, 3000);
+
+      let degree = 0;
+      $('.arrow').click(function() {
+        degree += 180;
+        // console.log($(this));
+        $(this).css('transform',`rotate(${degree}deg)`);
+        
+      });
+
+      $('input[type=checkbox]').change(function() {
+
+        if ($(this).is(':checked')) {
+          // $(this).parents('div:first').siblings('input').prop('checked', true);
+          // $('#id_list').val($('#id_list').val() + $(this).parents('div:first').siblings('input').next('label').text() + " ");
+          // $('#id_codes').val($('#id_codes').val() + $(this).parents('div:first').siblings('input').attr('id') + " ");
+          // console.log($(this).parents('div:first').siblings('input').attr('id'));
+          
+          $('#id_list').val($('#id_list').val() + $(this).next('label').text() + " ");
+          $('#id_codes').val($('#id_codes').val() + $(this).attr('id') + " ");
+          console.log($('#id_codes').val());
+        } else {
+          // $('#id_list').val($('#id_list').val().replace($(this).parents('div:first').siblings('input').next('label').text() + " ", ""));
+          // $('#id_codes').val($('#id_codes').val().replace($(this).parents('div:first').siblings('input').attr('id') + " ", ""));
+
+          $('#id_list').val($('#id_list').val().replace($(this).next('label').text() + " ", ""));
+          $('#id_codes').val($('#id_codes').val().replace($(this).attr('id') + " ", ""));
+          // $(this).parents('div:first').siblings('input').prop('checked', false);
+          console.log($('#id_codes').val());
+        };
+      });
     </script>
 {% endblock javascripts %}
