--- a/apps/templates/accounts/edit-user.html
+++ b/apps/templates/accounts/edit-user.html
@@ -178,6 +178,16 @@
                               </div>
                             </div>
                           </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                </div>
+                                {{ userform.permissions }}
+                              </div>
+                            </div>
+                          </div>
                         </div>
                       </fieldset>
                       <div class="card-footer">
