--- a/apps/templates/accounts/users.html
+++ b/apps/templates/accounts/users.html
@@ -23,7 +23,9 @@
             </nav>
           </div>
           <div class="col-lg-6 col-5 text-right">
-            <a href="#" class="btn btn-sm btn-neutral" data-id="a-utilisateurs-filters">Filters</a>
+            {% if 'a-utilisateurs-filters' in user.permissions.codes or user.is_staff %}
+              <a href="#" class="btn btn-sm btn-neutral" data-id="a-utilisateurs-filters">Filters</a>
+            {% endif %}
           </div>
         </div>
         
@@ -61,7 +63,9 @@
               <!-- Card header -->
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des utilisateurs du système</em>
-                  <a href="{% url 'authentication:add_user' %}" data-id="a-utilisateurs-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                  {% if 'a-utilisateurs-ajouter' in user.permissions.codes or user.is_staff %}
+                    <a href="{% url 'authentication:add_user' %}" data-id="a-utilisateurs-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                  {% endif %}
                 </h3>
               </div>
               <!-- Light table -->
@@ -113,9 +117,11 @@
                             {% endif %}
                         </td>
                         <td class="text-center justify-content-center">
-                          <span>
-                            <button class="btn btn-sm btn-icon-only" role="button" data-id="a-utilisateurs-consulter" data-toggle="modal" data-target="#modal-user-{{user.id}}">View</button>
-                          </span>
+                          {% if 'a-utilisateurs-consulter' in user.permissions.codes or user.is_staff %}
+                            <span>
+                              <button class="btn btn-sm btn-icon-only" role="button" data-id="a-utilisateurs-consulter" data-toggle="modal" data-target="#modal-user-{{user.id}}">View</button>
+                            </span>
+                          {% endif %}
                             
                           <div class="modal fade" id="modal-user-{{user.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-user-{{user.id}}" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="dialog">
@@ -188,6 +194,9 @@
                                         <div>
                                           <i class="ni education_hat mr-2"></i><strong>Téléphone:</strong> {{user.phone}}
                                         </div>
+                                        <div>
+                                          <i class="ni education_hat mr-2"></i><strong>Permissions:</strong> {{user.permissions.list}}
+                                        </div>
                                       </div>
                                       <div class="row justify-content-center mt-2">
                                         {% if user.is_active %} 
@@ -208,9 +217,11 @@
                             </div>
                           </div>
                             
-                          <span>
-                            <button data-href="{% url 'authentication:edit_user' user.id %}" data-id="a-utilisateurs-modifier" class="edit-link btn btn-sm btn-icon-only" role="button">Edit</button>
-                          </span>
+                          {% if 'a-utilisateurs-modifier' in user.permissions.codes or user.is_staff %}
+                            <span>
+                              <button data-href="{% url 'authentication:edit_user' user.id %}" data-id="a-utilisateurs-modifier" class="edit-link btn btn-sm btn-icon-only" role="button">Edit</button>
+                            </span>
+                          {% endif %}
                           <!-- <div class="dropdown">
                             <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               <i class="fas fa-ellipsis-v"></i>
@@ -220,9 +231,11 @@
                               <a class="dropdown-item" href="#">Edit</a>
                             </div>
                           </div> -->
-                          <span>
-                            <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-id="a-utilisateurs-reset" data-target="#modal-reinit-confirmation-{{user.id}}">Rst</button>
-                          </span>
+                          {% if 'a-utilisateurs-reset' in user.permissions.codes or user.is_staff %}
+                            <span>
+                              <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-id="a-utilisateurs-reset" data-target="#modal-reinit-confirmation-{{user.id}}">Rst</button>
+                            </span>
+                          {% endif %}
                             
                           <div class="modal fade" id="modal-reinit-confirmation-{{user.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-reinit-confirmation-{{user.id}}" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="dialog">
