--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -23,7 +23,9 @@
             </nav>
           </div>
           <div class="col-lg-6 col-5 text-right">
-            <a href="#" class="btn btn-sm btn-neutral" data-id="a-paiements-filters">Filters</a>
+            {% if 'a-paiements-filters' in user.permissions.codes or user.is_staff %}
+              <a href="#" class="btn btn-sm btn-neutral" data-id="a-paiements-filters">Filters</a>
+            {% endif %}
           </div>
         </div>
         
@@ -64,7 +66,9 @@
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des paiements</em>
                   <!-- <a href="{% url 'paiement:add_payment' %}" class="btn btn-sm btn-neutral float-right">+ Ajouter</a> -->
-                  <button class="btn btn-sm btn-neutral float-right" data-id="a-paiements-generer" role="button" data-toggle="modal" data-target="#modal-payment-generate">Generate</button>
+                  {% if 'a-paiements-generer' in user.permissions.codes or user.is_staff %}
+                    <button class="btn btn-sm btn-neutral float-right" data-id="a-paiements-generer" role="button" data-toggle="modal" data-target="#modal-payment-generate">Generate</button>
+                  {% endif %}
                 </h3>
               </div>
               <div class="modal fade" id="modal-payment-generate" tabindex="-1" role="dialog" aria-labelledby="modal-payment-generate" aria-hidden="true">
@@ -144,7 +148,9 @@
                         </td>
                         <td class="text-center justify-content-center">
                           <span>
+                            {% if 'a-paiements-consulter' in user.permissions.codes or user.is_staff %}
                             <button class="btn btn-sm btn-icon-only" role="button" data-id="a-paiements-consulter" data-toggle="modal" data-target="#modal-payment-{{payment.id}}">View</button>
+                            {% endif %}
                           </span>
                             
                           <div class="modal fade" id="modal-payment-{{payment.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-payment-{{payment.id}}" aria-hidden="true">
@@ -214,7 +220,9 @@
                           </span>
 
                           <span>
-                            <button data-href="{% url 'paiement:payment_receipt' payment.id %}" data-id="a-paiements-imprimer" onclick="window.open($(this).data('href'), '_blank')" class="btn btn-sm btn-icon-only" role="button">Print</button>
+                            {% if 'a-paiements-imprimer' in user.permissions.codes or user.is_staff %}
+                              <button data-href="{% url 'paiement:payment_receipt' payment.id %}" data-id="a-paiements-imprimer" onclick="window.open($(this).data('href'), '_blank')" class="btn btn-sm btn-icon-only" role="button">Print</button>
+                            {% endif %}
                           </span>
                           
                         </td>
