--- a/apps/templates/accounts/permissions.html
+++ b/apps/templates/accounts/permissions.html
@@ -96,7 +96,7 @@
                         <td class="autorisations">
                           {{permission.profile_type}}
                         </td>
-                        <td class="autorisations" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 5%;">
+                        <td class="autorisations" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;">
                           {{permission.list}}
                         </td>
                         <td class="text-center justify-content-center actions">
