--- a/apps/templates/includes/footer-rtl.html
+++ b/apps/templates/includes/footer-rtl.html
@@ -3,17 +3,17 @@
         <div class="row align-items-center justify-content-lg-between">
           <div class="col-lg-6">
             <div class="copyright text-center  text-lg-right  text-muted">
-                &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold ml-1" 
-                          target="_blank" rel="noopener noreferrer" >Creative Tim</a> 
-                - Coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.
+                &copy; <a href="/" class="font-weight-bold ml-1" 
+                          target="_blank" rel="noopener noreferrer" >Paiements</a> 
+                - Coded by <a target="_blank" rel="noopener noreferrer" href="#">OD</a>.
             </div>
           </div>
           <div class="col-lg-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
                 <a target="_blank" rel="noopener noreferrer" 
-                   href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" 
-                   class="nav-link text-white" target="_blank">Django Argon Dashboard PRO</a>
+                  href="#" 
+                  class="nav-link text-white" target="_blank">FASOSMART</a>
               </li>
             </ul>
           </div>
