--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -14,7 +14,7 @@
           <li class="nav-item">
             <a target="_blank" rel="noopener noreferrer" 
                href="#" 
-               class="nav-link text-white" target="_blank">###</a>
+               class="nav-link text-white" target="_blank">FASOSMART</a>
           </li>
         </ul>
       </div>
