Profile forms icons updated and picture upload/display handled

--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -134,7 +134,11 @@
                         <th scope="row">
                           <div class="media align-items-center">
                             <a href="#" class="avatar rounded-circle mr-3">
-                              <!-- <img alt="Image placeholder" src="/static/assets/img/theme/bootstrap.jpg"> -->
+                              {% if profile.picture %}
+                                <img alt="Picture" src="{{profile.picture.url}}">
+                              {% else %}
+                                <i class="fas fa-image"></i>
+                              {% endif %}
                             </a>
                             <div class="media-body">
                               <span class="name mb-0 text-sm"> {{profile.name}} </span>
