--- a/apps/templates/accounts/add-profile.html
+++ b/apps/templates/accounts/add-profile.html
@@ -85,7 +85,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ profileform.name }}
                               </div>
@@ -116,10 +116,10 @@
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
-                                {{ profileform.location }}
-                                <div class="input-group-append">
-                                  <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-location-arrow"></i></span>
                                 </div>
+                                {{ profileform.location }}
                               </div>
                             </div>
                           </div>
@@ -151,7 +151,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-align-left"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-address-book"></i></span>
                                 </div>
                                 {{ profileform.adresse }}
                               </div>
@@ -160,10 +160,10 @@
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
-                                {{ profileform.email }}
-                                <div class="input-group-append">
-                                  <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
+                                {{ profileform.email }}
                               </div>
                             </div>
                           </div>
@@ -177,7 +177,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ userform.first_name }}
                               </div>
@@ -187,7 +187,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ userform.last_name }}
                               </div>
@@ -199,7 +199,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
                                 {{ userform.email }}
                               </div>
@@ -209,12 +209,9 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
-                                </div>
-                                {{ userform.phone }}
-                                <div class="input-group-append">
                                   <span class="input-group-text"><i class="fas fa-phone"></i></span>
                                 </div>
+                                {{ userform.phone }}
                               </div>
                             </div>
                           </div>
@@ -224,7 +221,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-briefcase"></i></span>
                                 </div>
                                 {{userform.job}}
                               </div>
