--- a/apps/templates/accounts/edit-profile.html
+++ b/apps/templates/accounts/edit-profile.html
@@ -80,7 +80,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ profileform.name }}
                               </div>
@@ -111,10 +111,10 @@
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
-                                {{ profileform.location }}
-                                <div class="input-group-append">
-                                  <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-location-arrow"></i></span>
                                 </div>
+                                {{ profileform.location }}
                               </div>
                             </div>
                           </div>
@@ -146,7 +146,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-align-left"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-address-book"></i></span>
                                 </div>
                                 {{ profileform.adresse }}
                               </div>
@@ -155,10 +155,10 @@
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
-                                {{ profileform.email }}
-                                <div class="input-group-append">
-                                  <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
+                                {{ profileform.email }}
                               </div>
                             </div>
                           </div>
