--- a/apps/templates/accounts/edit-user.html
+++ b/apps/templates/accounts/edit-user.html
@@ -81,7 +81,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ userform.first_name }}
                               </div>
@@ -91,7 +91,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-file-signature"></i></span>
                                 </div>
                                 {{ userform.last_name }}
                               </div>
@@ -103,7 +103,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
                                 {{ userform.email }}
                               </div>
@@ -113,12 +113,9 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
-                                </div>
-                                {{ userform.phone }}
-                                <div class="input-group-append">
                                   <span class="input-group-text"><i class="fas fa-phone"></i></span>
                                 </div>
+                                {{ userform.phone }}
                               </div>
                             </div>
                           </div>
@@ -128,7 +125,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-tag"></i></span>
                                 </div>
                                 {{ userform.type }}
                               </div>
@@ -138,7 +135,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-briefcase"></i></span>
                                 </div>
                                 {{ userform.job }}
                               </div>
@@ -150,7 +147,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-location-arrow"></i></span>
                                 </div>
                                 {{ userform.location }}
                               </div>
@@ -160,7 +157,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
                                 </div>
                                 {{ userform.agency }}
                               </div>
@@ -171,10 +168,10 @@
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
-                                <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
-                                </div>
                                 {{ userform.picture }}
+                                <div class="input-group-append">
+                                  <span class="input-group-text"><i class="fas fa-image"></i></span>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -182,7 +179,7 @@
                             <div class="form-group">
                               <div class="input-group input-group-merge">
                                 <div class="input-group-prepend">
-                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  <span class="input-group-text"><i class="fas fa-tasks"></i></span>
                                 </div>
                                 {{ userform.permissions }}
                               </div>
