--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -176,7 +176,11 @@
                                 <div class="modal-body">
 
                                   <div class="card card-profile mt--4 mb--4">
-                                    <img src="/static/assets/img/theme/img-1-1000x600.jpg" alt="Image placeholder" class="card-img-top">
+                                    {% if profile.picture %}
+                                      <img src="{{profile.picture.url}}"  alt="Picture" class="card-img-top" style="max-height: 226px;">
+                                    {% else %}
+                                      <img src="/static/assets/img/theme/img-1-1000x600.jpg" alt="Image placeholder" class="card-img-top">
+                                    {% endif %}
                                     
                                     <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
                                       <div class="d-flex justify-content-between">
